[gd_scene load_steps=2 format=3 uid="uid://bd0xsjc2v0spu"]

[ext_resource type="Script" path="res://singlePlayer/single_player.gd" id="1_t3kt1"]

[node name="SinglePlayer" type="Node2D"]
script = ExtResource("1_t3kt1")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="top_info" type="HBoxContainer" parent="Control"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="lbl_tours" type="Label" parent="Control/top_info"]
layout_mode = 2

[node name="lbl_info" type="Label" parent="Control/top_info"]
layout_mode = 2

[node name="middle_area" type="HBoxContainer" parent="Control"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="player_area" type="VBoxContainer" parent="Control/middle_area"]
layout_mode = 2

[node name="lbl_player_name" type="Label" parent="Control/middle_area/player_area"]
layout_mode = 2

[node name="player_cards_container" type="HBoxContainer" parent="Control/middle_area/player_area"]
layout_mode = 2

[node name="bot_area" type="VBoxContainer" parent="Control/middle_area"]
layout_mode = 2

[node name="lbl_bot_name" type="Label" parent="Control/middle_area/bot_area"]
layout_mode = 2

[node name="bot_cards_container" type="HBoxContainer" parent="Control/middle_area/bot_area"]
layout_mode = 2

[node name="bottom_area" type="HBoxContainer" parent="Control"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="txt_calcul_reponse" type="LineEdit" parent="Control/bottom_area"]
layout_mode = 2

[node name="btn_valider" type="Button" parent="Control/bottom_area"]
layout_mode = 2

[node name="timer_calcul" type="Timer" parent="Control"]
